RESOLVED FIXED223917
Nullptr crash in applyCommonButtonPaddingToStyle
https://bugs.webkit.org/show_bug.cgi?id=223917
Summary Nullptr crash in applyCommonButtonPaddingToStyle
Antti Koivisto
Reported 2021-03-30 03:31:02 PDT
frame can be null
Attachments
patch (1.63 KB, patch)
2021-03-30 03:33 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-03-30 03:31:33 PDT
Antti Koivisto
Comment 2 2021-03-30 03:33:28 PDT
EWS
Comment 3 2021-03-30 13:25:59 PDT
Committed r275230: <https://commits.webkit.org/r275230> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424626 [details].
Note You need to log in before you can comment on or make changes to this bug.