Nullptr crash in applyCommonButtonPaddingToStyle https://bugs.webkit.org/show_bug.cgi?id=223917 rdar://57262957

Reviewed by Zalan Bujtas.

* rendering/RenderThemeIOS.mm:
(WebCore::applyCommonButtonPaddingToStyle):

Null check frame.


git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275230 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235924@main